--- a/src/Blazor.Server.UI/Pages/Itineraries/Itineraries.razor
+++ b/src/Blazor.Server.UI/Pages/Itineraries/Itineraries.razor
@@ -166,10 +166,10 @@
                         <MudText Typo="Typo.body2">@context.Item.TerminalStation</MudText>
                     </div>
                     <div class="d-flex flex-row gap-1">
-                        <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@L["Time: "]</MudText>
-                        <MudText Typo="Typo.body2">@context.Item.FirstTime</MudText>
-                        <MudText Typo="Typo.body2"> - </MudText>
-                        <MudText Typo="Typo.body2">@context.Item.LastTime</MudText>
+                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@L["Time: "]</MudText>
+                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.FirstTime</MudText>
+                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")"> - </MudText>
+                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.LastTime</MudText>
                     </div>
 
 
@@ -179,7 +179,7 @@
         <PropertyColumn Property="x => x.Bus" Title="@L[_currentDto.GetMemberDescription(x=>x.Bus)]">
             <CellTemplate>
                 <MudText Typo="Typo.body2">@context.Item.Bus.PlatNumber</MudText>
-                <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@context.Item.Bus.Description</MudText>
+                <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Bus.Description</MudText>
             </CellTemplate>
         </PropertyColumn>
         <PropertyColumn Property="x => x.Pilot" Title="@L[_currentDto.GetMemberDescription(x=>x.Pilot)]" CellClass="d-flex align-items-center">
@@ -196,7 +196,7 @@
                 </MudAvatar>
                 <div class="ml-2">
                     <MudText Typo="Typo.body2">@context.Item.Pilot.DisplayName</MudText>
-                    <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@context.Item.Pilot.Phone</MudText>
+                    <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.Pilot.Phone</MudText>
                 </div>
             </CellTemplate>
         </PropertyColumn>
@@ -213,7 +213,7 @@
                 <CellTemplate>
                     <div class="d-flex flex-column">
                         <MudText Typo="Typo.body2">@context.Item.Tenant.Name</MudText>
-                        <MudText Typo="Typo.body2" Style="color:var(--mud-palette-text-secondary) !important">@context.Item.TenantId</MudText>
+                        <MudText Typo="Typo.body2" Style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">@context.Item.TenantId</MudText>
                     </div>
                 </CellTemplate>
             </PropertyColumn>
