--- a/src/Blazor.Server.UI/Pages/Index.razor
+++ b/src/Blazor.Server.UI/Pages/Index.razor
@@ -19,7 +19,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Castle" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalSchools</h2>
-                    <p style="color:#99a0b0">School</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">School</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -28,7 +28,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalBuses</h2>
-                    <p style="color:#99a0b0">Bus</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Bus</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -37,7 +37,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.FollowTheSigns" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalPilots</h2>
-                    <p style="color:#99a0b0">Pilot</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Pilot</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -46,7 +46,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.LinearScale" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalItineraries</h2>
-                    <p style="color:#99a0b0">Itinerary</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Itinerary</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -55,7 +55,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Groups" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalStudents</h2>
-                    <p style="color:#99a0b0">Student</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Student</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -64,7 +64,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.EscalatorWarning" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalParents</h2>
-                    <p style="color:#99a0b0">Parent</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Parent</p>
                 </div>
             </MudPaper>
         </MudItem>
@@ -73,7 +73,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.History" Color="Color.Info" Size="Size.Large"></MudIcon>
                 <div class="ml-3 d-flex flex-column">
                     <h2>@SummaryInfo.TotalTransportLogs</h2>
-                    <p style="color:#99a0b0">Transport Logs</p>
+                    <p style="@($"color:{Theme.Theme.ApplicationTheme().Palette.TextSecondary}")">Transport Logs</p>
                 </div>
             </MudPaper>
         </MudItem>
