--- a/src/Blazor.Server.UI/Pages/Pilots/Scanner.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/Scanner.razor
@@ -25,7 +25,7 @@
 
 @if (_itinerary is not null)
 {
-    <DeviceScanComponent Itinerary="@_itinerary" UserProfile="@UserProfile"></DeviceScanComponent>
+    <DeviceScanComponent @ref="@_deviceScan" Itinerary="@_itinerary" UserProfile="@UserProfile"></DeviceScanComponent>
 }
 else
 {
@@ -41,6 +41,8 @@ else
     private ItineraryDto? _itinerary { get; set; } = null!;
     [Inject]
     private IMediator Mediator { get; set; } = default!;
+
+    private DeviceScanComponent _deviceScan;
     protected override async Task OnInitializedAsync()
     {
 
@@ -48,8 +50,9 @@ else
         _itineraries = result;
         _itinerary = _itineraries.FirstOrDefault();
     }
-    void SetItinerary(ItineraryDto item)
+    async void SetItinerary(ItineraryDto item)
     {
         _itinerary = item;
+        await _deviceScan.LoadOnBoardStudents(item.Id);
     }
 }
