--- a/src/Blazor.Server.UI/Pages/Schools/Schools.razor
+++ b/src/Blazor.Server.UI/Pages/Schools/Schools.razor
@@ -267,6 +267,12 @@
         _canDelete = (await AuthService.AuthorizeAsync(state.User, Permissions.Schools.Delete)).Succeeded;
         _canImport = (await AuthService.AuthorizeAsync(state.User, Permissions.Schools.Import)).Succeeded;
         _canExport = (await AuthService.AuthorizeAsync(state.User, Permissions.Schools.Export)).Succeeded;
+        UserProfileState.StateChanged += StateOnStateChanged;
+    }
+    protected override void Dispose(bool disposing)
+    {
+        UserProfileState.StateChanged -= StateOnStateChanged;
+        base.Dispose(disposing);
     }
     private async Task<GridData<SchoolDto>> ServerReload(GridState<SchoolDto> state)
     {
@@ -286,6 +292,17 @@
             _loading = false;
         }
 
+    }
+    private void StateOnStateChanged(object? sender, EventArgs args)
+    {
+        InvokeAsync(async () =>
+        {
+            if (!UserProfileState.Value.IsLoading)
+            {
+                await _table.ReloadServerData();
+                StateHasChanged();
+            }
+        });
     }
     private async Task OnSearch(string text)
     {
