--- a/src/Blazor.Server.UI/Pages/Buses/Buses.razor
+++ b/src/Blazor.Server.UI/Pages/Buses/Buses.razor
@@ -266,6 +266,23 @@
         _canDelete = (await AuthService.AuthorizeAsync(state.User, Permissions.Buses.Delete)).Succeeded;
         _canImport = (await AuthService.AuthorizeAsync(state.User, Permissions.Buses.Import)).Succeeded;
         _canExport = (await AuthService.AuthorizeAsync(state.User, Permissions.Buses.Export)).Succeeded;
+        UserProfileState.StateChanged += StateOnStateChanged;
+    }
+    protected override void Dispose(bool disposing)
+    {
+        UserProfileState.StateChanged -= StateOnStateChanged;
+        base.Dispose(disposing);
+    }
+    private void StateOnStateChanged(object? sender, EventArgs args)
+    {
+        InvokeAsync(async () =>
+        {
+            if (!UserProfileState.Value.IsLoading)
+            {
+                await _table.ReloadServerData();
+                StateHasChanged();
+            }
+        });
     }
     private async Task<GridData<BusDto>> ServerReload(GridState<BusDto> state)
     {
