--- a/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
+++ b/src/Blazor.Server.UI/Pages/Pilots/Pilots.razor
@@ -269,6 +269,23 @@
         _canDelete = (await AuthService.AuthorizeAsync(state.User, Permissions.Pilots.Delete)).Succeeded;
         _canImport = (await AuthService.AuthorizeAsync(state.User, Permissions.Pilots.Import)).Succeeded;
         _canExport = (await AuthService.AuthorizeAsync(state.User, Permissions.Pilots.Export)).Succeeded;
+        UserProfileState.StateChanged += StateOnStateChanged;
+    }
+    protected override void Dispose(bool disposing)
+    {
+        UserProfileState.StateChanged -= StateOnStateChanged;
+        base.Dispose(disposing);
+    }
+    private void StateOnStateChanged(object? sender, EventArgs args)
+    {
+        InvokeAsync(async () =>
+        {
+            if (!UserProfileState.Value.IsLoading)
+            {
+                await _table.ReloadServerData();
+                StateHasChanged();
+            }
+        });
     }
     private async Task<GridData<PilotDto>> ServerReload(GridState<PilotDto> state)
     {
