--- a/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
+++ b/src/Blazor.Server.UI/Pages/TransportLogs/TransportLogs.razor
@@ -232,6 +232,23 @@
         _canDelete = (await AuthService.AuthorizeAsync(state.User, Permissions.TransportLogs.Delete)).Succeeded;
         _canImport = (await AuthService.AuthorizeAsync(state.User, Permissions.TransportLogs.Import)).Succeeded;
         _canExport = (await AuthService.AuthorizeAsync(state.User, Permissions.TransportLogs.Export)).Succeeded;
+        UserProfileState.StateChanged += StateOnStateChanged;
+    }
+    protected override void Dispose(bool disposing)
+    {
+        UserProfileState.StateChanged -= StateOnStateChanged;
+        base.Dispose(disposing);
+    }
+    private void StateOnStateChanged(object? sender, EventArgs args)
+    {
+        InvokeAsync(async () =>
+        {
+            if (!UserProfileState.Value.IsLoading)
+            {
+                await _table.ReloadServerData();
+                StateHasChanged();
+            }
+        });
     }
     private async Task<GridData<TransportLogDto>> ServerReload(GridState<TransportLogDto> state)
     {
