--- a/src/Blazor.Server.UI/Pages/Messages/_MessageFormDialog.razor
+++ b/src/Blazor.Server.UI/Pages/Messages/_MessageFormDialog.razor
@@ -1,4 +1,5 @@
-﻿@using CleanArchitecture.Blazor.Application.Features.Messages.Commands.AddEdit
+﻿@using CleanArchitecture.Blazor.Application.Common.Interfaces.MultiTenant;
+@using CleanArchitecture.Blazor.Application.Features.Messages.Commands.AddEdit
 
 @inherits MudComponentBase
 @inject IStringLocalizer<Messages> L
@@ -28,10 +29,22 @@
                 </MudItem> 
 <MudItem xs="12" md="6"> 
                         <MudTextField Label="@L[model.GetMemberDescription(x=>x.Status)]" @bind-Value="model.Status" For="@(() => model.Status)" Required="false" RequiredError="@L["status is required!"]"></MudTextField>
-                </MudItem> 
-<MudItem xs="12" md="6"> 
-                        <MudTextField Label="@L[model.GetMemberDescription(x=>x.TenantId)]" @bind-Value="model.TenantId" For="@(() => model.TenantId)" Required="false" RequiredError="@L["tenant id is required!"]"></MudTextField>
-                </MudItem> 
+                </MudItem>
+                @if (UserProfile.IsSuperAdmin)
+                {
+                    <MudItem xs="12" md="6">
+                        <MudSelect For="@(() => model.TenantId)"
+                                   Label="@L["Select Organization"]"
+                                   Required="true"
+                                   RequiredError="@L["Organization is required."]"
+                        @bind-Value="@model.TenantId">
+                            @foreach (var item in TenantsService.DataSource)
+                            {
+                                <MudSelectItem Value="@item.Id">@item.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                }
 
             </MudGrid>
         </MudForm>
@@ -52,6 +65,9 @@
     AddEditMessageCommandValidator _modelValidator = new ();
     [EditorRequired] [Parameter] public AddEditMessageCommand model { get; set; } = null!;
     [Inject] private IMediator _mediator { get; set; } = default!;
+    [Inject]
+    private ITenantService TenantsService { get; set; } = default!;
+    [Parameter] public UserProfile UserProfile { get; set; } = null!;
     async Task Submit()
     {
         try
